SigmaCodebackup3rdSep/objects/Budget_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amt_in_PO__c</fullName>
        <label>Amount in Purchase Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_in_SO__c</fullName>
        <label>Amount in Sales Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_in_project__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Spent on Project</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Item__c</fullName>
        <label>Budget Item</label>
        <referenceTo>Budget_Items__c</referenceTo>
        <relationshipName>Budget_Item_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expenditure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expenditure</label>
        <referenceTo>Expenditure__c</referenceTo>
        <relationshipLabel>Budget Transactions</relationshipLabel>
        <relationshipName>Budget_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>Budget Transactions</relationshipLabel>
        <relationshipName>Budget_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Product</label>
        <referenceTo>Purchase_Order_Product__c</referenceTo>
        <relationshipLabel>Budget Transactions</relationshipLabel>
        <relationshipName>Budget_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Purchase Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Quantity__c</fullName>
        <label>Sales Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Sigma Order</fullName>
                </value>
                <value>
                    <fullName>Service Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Budget Transaction</label>
    <nameField>
        <displayFormat>BGT-{000000}</displayFormat>
        <label>BGT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>